# rusty-crudy-duddy

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs  message.rs
